--- a/2023_Graduate_Project/Base.lproj/Main.storyboard
+++ b/2023_Graduate_Project/Base.lproj/Main.storyboard
@@ -225,32 +225,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gSH-5p-s2H">
-                                <rect key="frame" x="10" y="10" width="300" height="36"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="gSH-5p-s2H">
+                                <rect key="frame" x="10" y="10" width="300" height="20.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="방문 요청 일시" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XUk-ii-hSx">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="36"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="요청 일시" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XUk-ii-hSx">
+                                        <rect key="frame" x="0.0" y="0.0" width="63.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="2sX-gd-RPA">
-                                        <rect key="frame" x="50" y="0.0" width="250" height="36"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="250" id="SX5-CJ-ufN"/>
-                                        </constraints>
-                                        <locale key="locale" localeIdentifier="ko_KR"/>
-                                        <connections>
-                                            <action selector="changeDate:" destination="nMK-9I-lGn" eventType="valueChanged" id="pZ0-Ma-a7n"/>
-                                        </connections>
-                                    </datePicker>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="예) 2월 20일 오후 5시" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pLT-Wc-R24">
+                                        <rect key="frame" x="83.5" y="0.0" width="216.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstItem="2sX-gd-RPA" firstAttribute="leading" secondItem="XUk-ii-hSx" secondAttribute="trailing" id="fg8-nt-f98"/>
-                                </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="okb-Zk-62A">
-                                <rect key="frame" x="10" y="61" width="300" height="20.5"/>
+                                <rect key="frame" x="10" y="45.5" width="300" height="20.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="요청 부분" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fAO-EA-eka">
                                         <rect key="frame" x="0.0" y="0.0" width="63.5" height="20.5"/>
@@ -266,7 +258,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="rwn-uE-2iB">
-                                <rect key="frame" x="10" y="96.5" width="300" height="150"/>
+                                <rect key="frame" x="10" y="81" width="300" height="150"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="상세 설명" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="45l-lo-vti">
                                         <rect key="frame" x="0.0" y="0.0" width="63.5" height="150"/>
@@ -287,7 +279,7 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="41" translatesAutoresizingMaskIntoConstraints="NO" id="1Qm-Le-AVG">
-                                <rect key="frame" x="10" y="266.5" width="236" height="20.5"/>
+                                <rect key="frame" x="10" y="251" width="236" height="20.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이미지 첨부" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oDv-gO-YL5">
                                         <rect key="frame" x="0.0" y="0.0" width="78" height="20.5"/>
@@ -306,13 +298,13 @@
                                 </subviews>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3U7-hg-Jus">
-                                <rect key="frame" x="15" y="317" width="290" height="150"/>
+                                <rect key="frame" x="15" y="301.5" width="290" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="0Da-P6-Xva"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZOw-bt-scP">
-                                <rect key="frame" x="30" y="487" width="260" height="11"/>
+                                <rect key="frame" x="30" y="471.5" width="260" height="26.5"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="견적 받기 !"/>
                                 <connections>
@@ -346,8 +338,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="1i7-Em-dXw"/>
                     <connections>
-                        <outlet property="datePicker" destination="2sX-gd-RPA" id="KLK-aI-pgW"/>
                         <outlet property="findPhotoButton" destination="brv-iq-Z9T" id="8wC-y5-EWG"/>
+                        <outlet property="requestDateTextField" destination="pLT-Wc-R24" id="If8-2X-MYj"/>
                         <outlet property="requestDescriptTextView" destination="Kec-jy-HMt" id="VJ2-I7-6Y9"/>
                         <outlet property="requestPartTextField" destination="Lkb-Mk-I1D" id="yMU-ac-5zh"/>
                         <outlet property="uploadedImage" destination="3U7-hg-Jus" id="H4J-yL-E2w"/>
