--- a/2023_Graduate_Project/View/Base.lproj/Main.storyboard
+++ b/2023_Graduate_Project/View/Base.lproj/Main.storyboard
@@ -208,14 +208,32 @@
                     <view key="view" contentMode="scaleToFill" id="aYp-ty-d6e">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NJz-u0-phQ">
+                                <rect key="frame" x="10" y="10" width="370" height="216"/>
+                                <subviews>
+                                    <pickerView contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="K5u-E7-NsB">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="216"/>
+                                    </pickerView>
+                                    <pickerView contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4e7-fo-sqR">
+                                        <rect key="frame" x="50" y="0.0" width="320" height="216"/>
+                                    </pickerView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="7F6-Kr-EkK"/>
                         <color key="backgroundColor" red="0.97254901959999995" green="0.96862745100000003" blue="0.95294117649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="NJz-u0-phQ" firstAttribute="leading" secondItem="aYp-ty-d6e" secondAttribute="leading" constant="10" id="5FL-H9-qSf"/>
+                            <constraint firstAttribute="trailing" secondItem="NJz-u0-phQ" secondAttribute="trailing" constant="10" id="PaW-bP-7AZ"/>
+                            <constraint firstItem="NJz-u0-phQ" firstAttribute="top" secondItem="7F6-Kr-EkK" secondAttribute="top" constant="10" id="e7u-le-dcc"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="aFJ-wk-0JE"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="meW-rM-shz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4609" y="909"/>
+            <point key="canvasLocation" x="-4610.7692307692305" y="908.53080568720372"/>
         </scene>
         <!--수리요청 창 -->
         <scene sceneID="rhR-Is-Yoa">
@@ -401,7 +419,7 @@
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="SDU-ow-5Le">
                                         <rect key="frame" x="43" y="0.0" width="307" height="500"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                        <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" systemColor="labelColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -433,6 +451,8 @@
                     <navigationItem key="navigationItem" id="2in-fC-BTM"/>
                     <connections>
                         <outlet property="TitleTextField" destination="RGS-bx-tEX" id="ud8-VR-ejX"/>
+                        <outlet property="okButton" destination="UKb-y0-9nT" id="maV-Sy-5ee"/>
+                        <outlet property="writeTextView" destination="SDU-ow-5Le" id="3bF-Mc-UzT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sd4-Am-pGD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
